--- a/minio/templates/deployment.yaml
+++ b/minio/templates/deployment.yaml
@@ -138,6 +138,10 @@ spec:
             - name: GOOGLE_APPLICATION_CREDENTIALS
               value: "/etc/credentials/gcs_key.json"
             {{- end }}
+            {{- if and .Values.gcsgateway.enabled .Values.gcsgateway.gcsKeyJsonSecret }}
+            - name: GOOGLE_APPLICATION_CREDENTIALS
+              value: "/etc/credentials/key.json"
+            {{- end }}
             {{- if .Values.etcd.endpoints }}
             - name: MINIO_ETCD_ENDPOINTS
               value: {{ join "," .Values.etcd.endpoints | quote }}
@@ -204,7 +208,13 @@ spec:
         {{- end }}
         {{- end }}
         - name: minio-user
-          secret:
-            secretName: {{ template "minio.secretName" . }}
+          projected:
+            sources:
+            - secret:
+                name: {{ template "minio.secretName" . }}
+            {{- if and .Values.gcsgateway.enabled .Values.gcsgateway.gcsKeyJsonSecret }}
+            - secret:
+                name: {{} .Values.gcsgateway.gcsKeyJsonSecret }}                    
+            {{- end }}
         {{- include "minio.tlsKeysVolume" . | indent 8 }}
 {{- end }}
